fixing protocol prepend

--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,14 @@
       </ul>
 
       <h2>Example creation usage:</h2>
-      <span class="code">https://little-url.herokuapp.com/new/https://www.google.com</span><br />
-      <span class="code">https://little-url.herokuapp.com/new/http://foo.com:80</span>
+      <span class="code">https://glacial-peak-36532.herokuapp.com/new/https://www.google.com</span><br />
+      <span class="code">https://glacial-peak-36532.herokuapp.com/new/http://foo.com:80</span>
 
       <h2>Example creation output</h2>
-      <span class="code">{ "original_url":"http://foo.com:80", "short_url":"https://little-url.herokuapp.com/8170" }</span>
+      <span class="code">{ "original_url":"http://foo.com:80", "short_url":"https://glacial-peak-36532.herokuapp.com/2" }</span>
 
       <h2>Usage:</h2>
-      <span class="code">https://little-url.herokuapp.com/2871</span>
+      <span class="code">https://glacial-peak-36532.herokuapp.com/1</span>
 
       <h2>Will redirect to:</h2>
       <span class="code">https://www.google.com/</span>
